Fixed button placement and alignment of landing page

--- a/src/index.css
+++ b/src/index.css
@@ -15,9 +15,8 @@ code {
 .header--logo {
   position: relative;
   text-align: center;
-  width: 500px;
+  width: 100%;
   height: 300px;
-  left: 70px;
   top: 98px;
 }
 
@@ -25,12 +24,11 @@ code {
   min-width: 100%;
 }
 
-.form {
-  display: grid;
-  text-align: center;
-  item-align: center;
+.container {
+  position: relative;
+  width: 100%;
 }
-
+/*
 .form--startButton {
   color: white;
   border-radius: 10px;
@@ -41,4 +39,23 @@ code {
   height: 50px;
   top: 605px;
   left: 70px;
+}
+*/
+.form--startButton {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  background-color: #1f3566;
+  color: white;
+  font-size: 16px;
+  padding: 12px 24px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.form.-startButton:hover {
+  background-color: black;
 }
